syntax = "proto3";
import "api/proto/auth/SignIn.proto";
package cloud.lianmi.im.auth;
option go_package = "github.com/lianmi/servers/api/proto/auth";

message GetAllDevicesRsp {
    repeated DeviceInfo onlineDevices = 1;
    repeated DeviceInfo offlineDevices = 2;
}